# LARGO-nspyre

./: README.md  pyproject.toml
src/largo/: launch.bat  requirements.txt
src/largo/drivers/: fake_fsm_driver.py  inserv.py  insmgr.py
src/largo/drivers/newport/: FSM_via_nidaqmx.py
src/largo/drivers/ni/: ni_motion_controller.py
src/largo/experiments/: odmr.py
src/largo/experiments/fsm/: fsm_gui.py  fsm_scan.py
src/largo/gui/: app.py  elements.py
