[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "largo-nspyre"
version = "0.1"
license = "MIT"
description = "An adapted nspyre template for the LARGO experiment."
authors = [
	"Jacob Feder <jacobsfeder@gmail.com>", 
	"Antoni Wellisz <awwellisz@gmail.com>",
]
maintainers = [
	"Antoni Wellisz <awwellisz@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/awellisz/LARGO-nspyre"
packages = [{include = "largo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
nspyre = "^0.6"

[tool.poetry.scripts]
largo = 'largo.gui.app:main'
